# utmrbc_ros

./: readme.md
bot1/bot1/: CMakeLists.txt  package.xml
bot1/bot1_bringup/: CMakeLists.txt  package.xml
bot1/bot1_bringup/launch/: bot1_core.launch  bot1_lidar.launch  bot1_model.launch  bot1_model_dev.launch  bot1_remote.launch  bot1_robot.launch  bot1_rplidar.launch
bot1/bot1_bringup/launch/includes/: description.launch.xml  description_dev.launch.xml
bot1/bot1_bringup/scripts/: create_udev_rules
bot1/bot1_bringup/src/: bot1_diagnostics.cpp
bot1/bot1_description/: CMakeLists.txt  package.xml
bot1/bot1_description_dev/: CMakeLists.txt  package.xml
bot1/bot1_description_dev/config/: joint_names_bot1_description_dev.yaml
bot1/bot1_description_dev/launch/: display.launch  gazebo.launch
bot1/bot1_description_dev/meshes/: base_footprint.STL  base_scan.STL  camera_link.STL  kinect_link.STL  wheel_bl_link.STL  wheel_br_link.STL
bot1/bot1_description_dev/rviz/: model.rviz
bot1/bot1_description_dev/urdf/: bot1_description_dev.csv  bot1_description_dev.urdf  bot1_description_dev.urdf.xacro
bot1/bot1_description_real/: CMakeLists.txt  package.xml
bot1/bot1_description_real/launch/: display.launch  gazebo.launch
bot1/bot1_description_real/urdf/: bot1_description_real.csv  bot1_description_real.urdf
bot1/bot1_navigation/: CMakeLists.txt  package.xml
bot1/bot1_navigation/launch/: amcl.launch  bot1_navigation.launch  bot1_ukf_localization.launch  move_base.launch
bot1/bot1_navigation/maps/: robocon20.yaml
bot1/bot1_navigation/param/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_bot1.yaml  costmap_common_params_waffle.yaml  dwa_local_planner_params.yaml  dwa_local_planner_params_bot1.yaml  dwa_local_planner_params_waffle.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
bot1/bot1_navigation/rviz/: bot1_navigation.rviz
bot1/bot1_slam/: CMakeLists.txt  package.xml
bot1/bot1_slam/config/: bot1_lds_2d_gazebo.lua
bot1/bot1_slam/launch/: bot1_gmapping.launch  bot1_gmapping.txt  bot1_hector.launch  bot1_slam.launch
bot1/bot1_slam/rviz/: bot1_gmapping.rviz
bot1/bot1_slam/src/: flat_world_imu_node2.cpp
bot1/bot1_teleop/: CMakeLists.txt  package.xml  setup.py
bot1/bot1_teleop/launch/: bot1_teleop_key.launch  bot1_teleop_ps4.launch
bot1/bot1_teleop/nodes/: bot1_teleop_key
bot1/bot1_teleop/src/: bot1_teleop_ps4.cpp
bot1/rviz/: model.rviz
bot1_simulations/bot1_fake/: CMakeLists.txt  package.xml
bot1_simulations/bot1_fake/include/bot1_fake/: bot1_fake.h
bot1_simulations/bot1_fake/launch/: bot1_fake.launch  bot1_fake_dev.launch
bot1_simulations/bot1_fake/src/: bot1_fake.cpp
bot1_simulations/bot1_gazebo/: CMakeLists.txt  package.xml
bot1_simulations/bot1_gazebo/include/bot1_gazebo/: bot1_drive.h
bot1_simulations/bot1_gazebo/launch/: bot1_world.launch  gamefield20.launch  gamefield20_tb3.launch
bot1_simulations/bot1_gazebo/maps/: map.pgm  robocon20.yaml
bot1_simulations/bot1_gazebo/models/bot1/: model.config  model.sdf
bot1_simulations/bot1_gazebo/models/bot1/meshes/: camera_link.STL  imu_link.STL  kinect_link.STL  wheel_br_link.STL  wheel_fl_link.STL  wheel_fr_link.STL
bot1_simulations/bot1_gazebo/models/gamefield20/: model.sdf
bot1_simulations/bot1_gazebo/models/gamefield20/meshes/: base_link.STL  base_link0.STL
bot1_simulations/bot1_gazebo/src/: bot1_drive.cpp
bot1_simulations/bot1_gazebo/worlds/: bot1_world.world  gamefield20.world
bot1_simulations/bot1_simulations/: CMakeLists.txt  package.xml
firmware/mb_ros/: .cproject  .project  mb_ros.elf.launch  stm32f4_flash.ld
firmware/mb_ros/Debug/: mb_ros.elf  mb_ros.list  mb_ros.map
firmware/mb_ros/Debug/src/: adapter.su  common.su  interrupt.su  main.su
firmware/mb_ros/src/: adapter.c  adapter.h  common.c  common.h  interrupt.c  interrupt.h  main.cpp  main.h  syscalls.c  system_stm32f4xx.c  tiny_printf.c
firmware/mb_ros/src/ABT/: ABT.c  ABT.h
firmware/mb_ros/src/ADC/: adc.c  adc.h
firmware/mb_ros/src/BIOS/: bdc.c  bios.h  gpio.c  gpio.h  pwm.c  (+11 more)
firmware/rns_ros/: .cproject  .project  rns_ros.elf.launch  stm32f4_flash.ld
firmware/rns_ros/Debug/: rns_ros.elf  rns_ros.list  rns_ros.map
firmware/rns_ros/src/: application.c  application.h  common.c  common.h  include.c  include.h  instruction.h  interrupt.c  interrupt.h  main.cpp  main.h  state.c  state.h  stm32f4xx_it.c  stm32f4xx_it.h  system.c  system.h  tiny_printf.c
firmware/ros_lib/canusb/: CAN.h
firmware/ros_lib/kondo/: servo.h
firmware/ros_lib/roborts_msgs/: FricWhl.h  GimbalAngle.h  GimbalMode.h  GimbalRate.h  ObstacleMsg.h  ShootCmd.h  ShootInfo.h  ShootState.h  TwistAccel.h
firmware/ros_lib/ros_threading_example/: Pose2D.h
firmware/ros_lib/rosbridge_library/: AddTwoInts.h  Num.h  SendBytes.h  TestArrayRequest.h  TestChar.h  TestDurationArray.h  TestEmpty.h  TestHeader.h  TestHeaderArray.h  TestHeaderTwo.h  TestMultipleRequestFields.h  TestMultipleResponseFields.h  TestNestedService.h  TestRequestAndResponse.h  TestRequestOnly.h  TestResponseOnly.h  TestTimeArray.h  TestUInt8.h  TestUInt8FixedSizeArray16.h
firmware/ros_lib/shuttle_kalman/: shuttle_msg.h
firmware/ros_lib/utmrbc_msgs/: AnalogInput.h  BDC.h  DigitalInput.h  HSPM.h  LED.h
robocon20_simulations/robocon20_fake/: CMakeLists.txt  package.xml
robocon20_simulations/robocon20_fake/include/robocon20_fake/: robocon20_fake.h
robocon20_simulations/robocon20_fake/launch/: robocon20_fake.launch
robocon20_simulations/robocon20_fake/src/: robocon20_fake.cpp
robocon20_simulations/robocon20_gazebo/: CMakeLists.txt  package.xml
robocon20_simulations/robocon20_gazebo/launch/: gamefield.launch  robocon20_world.launch
robocon20_simulations/robocon20_gazebo/src/: robocon20_drive.cpp
robocon20_simulations/robocon20_gazebo/worlds/: gamefield.world  robocon20_world.world
robocon20_simulations/robocon20_simulations/: CMakeLists.txt  package.xml
utmrbc_msgs/: CMakeLists.txt  package.xml
utmrbc_msgs/msg/: AnalogInput.msg  BDC.msg  DigitalInput.msg  HSPM.msg  LED.msg
(+485 files in other folders)
