<?xml version="1.0"?>
<package format="2">
  <name>bot1_bringup</name>
  <version>1.2.0</version>
  <description>
    roslaunch scripts for starting the bot1
  </description>
  <license>Apache 2.0</license>
  <maintainer email="l.alhakimghani@gmail.com">Luqman</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>bot1_description</exec_depend>
  <exec_depend>bot1_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <!-- <exec_depend>realsense_camera</exec_depend> for using Intel RealSense Camera -->
  <!-- <exec_depend>raspicam_node</exec_depend> for Pi using Raspberry Pi Camera -->
</package>
