<?xml version="1.0"?>
<package format="2">
  <name>bot1_navigation</name>
  <version>1.2.0</version>
  <description>
    The bot1_navigation provides roslaunch scripts for starting the navigation.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="l.alhakimghani@gmail.com">Luqman</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>bot1_bringup</exec_depend>
</package>
