<?xml version="1.0"?>
<package format="2">
  <name>robocon20_fake</name>
  <version>1.2.0</version>
  <description>
    Package for robocon20 fake node. With this package, simple tests can be done without a robot.
    You can do simple tests using this package on rviz without real robots.
  </description>
  <license>Apache 2.0</license>
  <maintainer email="l.alhakimghani@gmail.com">Luqman</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
