<?xml version="1.0"?>
<package format="2">
  <name>robocon20_simulations</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the robocon20 simulation (meta package)
  </description>
  <license>Apache 2.0</license>
  <maintainer email="l.alhakimghani@gmail.com">Luqman</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robocon20_fake</exec_depend>
  <exec_depend>robocon20_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
